apps/gin-fleamarket/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: gin-fleamarket
  name: gin-fleamarket
  namespace: gin-fleamarket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gin-fleamarket
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gin-fleamarket
    spec:
      containers:
      - image: ghcr.io/kkato/gin-fleamarket:latest
        name: gin-fleamarket
        volumeMounts:
        - name: env-file
          mountPath: /app/.env
          subPath: .env
      volumes:
      - name: env-file
        secret:
          secretName: gin-fleamarket-env
      imagePullSecrets:
      - name: ghcr
